# Rust-Python_Event-Driven_Back-Tester-

./: README.md  readme.md
data/: es_tick_sample.csv
notebooks/: demo_usage.ipynb
rust_core/: Cargo.toml
rust_core/src/: data.rs  engine.rs  events.rs  grid.rs  lib.rs  strategy.rs  walkforward.rs
