[package]
name    = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
polars       = { version = "0.44.2", features = ["lazy", "temporal", "dtype-datetime"] }
pyo3-polars  = { version = "0.18.0", default-features = false, features = ["lazy"] }
pyo3         = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }

chrono       = { version = "0.4", features = ["serde"] }
serde        = { version = "1",   features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
thiserror    = "1"
rayon        = "1"
